--- a/home.css
+++ b/home.css
@@ -41,6 +41,7 @@ body{
   position: absolute;
   width: 90%;
   left: 50%;
+  transform: translateX(-50%);
   height: 3px;
   background-color: var(--accent-highlight);
   top: 65px;
@@ -327,9 +328,9 @@ body{
       position: relative;
     }
   }
-  @media only screen and (min-width:600px){
+@media only screen and (min-width:600px){
     #d3-container{
-      width: 100vw; 
+      width: 100%; 
       height: 100vh; 
       position: relative;
     }
